# data_uploader

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.trial_name}}/: pyproject.toml
{{cookiecutter.trial_name}}/data/: README.md
{{cookiecutter.trial_name}}/src/io/: upload.py
